--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .stignore
 .stfolder
+.stversions
 *.backup
 *.bak
+*.err
 *.ori
 *.orig
 *.swp
@@ -18,6 +20,7 @@
 *.dwl2
 *.sv$
 plot.log
+plot~*
 ~$*
 
 #   MS Office, LibreOffice
